--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="?"><b>LLM Sycophancy under User Rebuttal.</b></a>  <br />    <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://wgantt.github.io/personal-website/"><font color="Black"> William Gantt Walden</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2503.21717"><b>ClaimCheck: How Grounded are LLM Critiques of Scientific Papers?.</b></a>  <br />    <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, <a href="https://wgantt.github.io/personal-website/"><font color="Black"> William Gantt Walden</font></a>, <a href="https://katesanders9.github.io/"><font color="Black"> Kate Sanders</font></a>, <a href="https://zipjiang.github.io/"><font color="Black"> Zhengping Jiang</font></a>, Kaiser Sun, Jeffrey Cheng, <a href="https://williamjurayj.com/"><font color="Black"> William Jurayj</font></a>, Miriam Wanner, Shaobo Liang, <a href="https://candice-morgan.github.io/"><font color="Black"> Candice Morgan</font></a>, Seunghoon Han, <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, Chandler May, Hannah Recknor, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/CLAIMCHECK">[data]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2509.16533"><b>Challenging the Evaluator: LLM Sycophancy under User Rebuttal.</b></a>  <br />    <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -611,7 +611,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-18 15:34:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-23 10:24:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
