--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2509.22621"><b>IA2: Alignment with ICL Activations Improves Supervised Fine-Tuning.</b></a>  <br />    <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.22621</font>, 2025. <font size=-1><a href="https://github.com/aamixsh/ia2">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2509.13930"><b>Linguistic Nepotism: Trading-off Quality for Language Preference in Multilingual RAG.</b></a>  <br />    Dayeon Ki, Marine Carpuat, Paul McNamee, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Eugene Yang, Dawn Lawrie and Kevin Duh. <br />   <font color="Gray">arXiv preprint arXiv:2509.1393</font>, 2025. <font size=-1><a href="https://github.com/dayeonki/linguistic_nepotism">[code]</a></font></p>
 </li>
 </ul>
@@ -258,7 +262,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2509.16533"><b>Challenging the Evaluator: LLM Sycophancy under User Rebuttal.</b></a>  <br />    <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2509.16533"><b>Challenging the Evaluator: LLM Sycophancy under User Rebuttal.</b></a>  <br />    <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Conference on Empirical Methods in Natural Language Processing (EMNLP) - Findings</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/challenging_the_judge">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -611,7 +615,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-23 10:24:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-09-29 09:19:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
