--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2509.25671"><b>The Flaw of Averages: Quantifying Uniformity of Performance on Benchmarks.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.25671</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2509.22621"><b>IA2: Alignment with ICL Activations Improves Supervised Fine-Tuning.</b></a>  <br />    <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.22621</font>, 2025. <font size=-1><a href="https://github.com/aamixsh/ia2">[code]</a></font></p>
 </li>
 </ul>
@@ -615,7 +619,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-09-29 09:19:53 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-02 12:15:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
