--- a/index.html
+++ b/index.html
@@ -222,6 +222,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2510.02480"><b>Safe and Efficient In-Context Learning via Risk Control.</b></a>  <br />    Andrea Wynn, Metod Jazbec, Charith Peris, Rinat Khaziev, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.02480</font>, 2025. <font size=-1><a href="https://github.com/andreawynn/llm-risk-control">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2509.22621"><b>IA2: Alignment with ICL Activations Improves Supervised Fine-Tuning.</b></a>  <br />    <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.22621</font>, 2025. <font size=-1><a href="https://github.com/aamixsh/ia2">[code]</a></font></p>
 </li>
 </ul>
@@ -619,7 +623,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-02 12:15:22 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-05 22:26:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
