--- a/index.html
+++ b/index.html
@@ -218,11 +218,11 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2509.25671"><b>The Flaw of Averages: Quantifying Uniformity of Performance on Benchmarks.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.25671</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2510.02480"><b>Safe and Efficient In-Context Learning via Risk Control.</b></a>  <br />    Andrea Wynn, Metod Jazbec, Charith Peris, Rinat Khaziev, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.02480</font>, 2025. <font size=-1><a href="https://danielkhashabi.com/files/2025_safe_icl/poster.pdf">[poster]</a> <a href="https://github.com/andreawynn/llm-risk-control">[code]</a></font></p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2510.02480"><b>Safe and Efficient In-Context Learning via Risk Control.</b></a>  <br />    Andrea Wynn, Metod Jazbec, Charith Peris, Rinat Khaziev, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.02480</font>, 2025. <font size=-1><a href="https://github.com/andreawynn/llm-risk-control">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2509.25671"><b>The Flaw of Averages: Quantifying Uniformity of Performance on Benchmarks.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=5fsB_GMAAAAJ"><font color="Black"> Arda Uzunoglu</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2509.25671</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -623,7 +623,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-05 22:26:39 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-06 15:59:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
