--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2510.08240"><b>The Alignment Waltz: Jointly Training Agents to Collaborate for Safety.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Haozhu Wang, Eric Michael Smith, Sid Wang, Amr Sharaf, Mahesh Pasupuleti, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Jason Weston and Hongyuan Zhan. <br />   <font color="Gray">arXiv preprint arXiv:2510.08240</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2510.02480"><b>Safe and Efficient In-Context Learning via Risk Control.</b></a>  <br />    Andrea Wynn, Metod Jazbec, Charith Peris, Rinat Khaziev, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://enalisnick.github.io/"><font color="Black"> Eric Nalisnick</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.02480</font>, 2025. <font size=-1><a href="https://danielkhashabi.com/files/2025_safe_icl/poster.pdf">[poster]</a> <a href="https://github.com/andreawynn/llm-risk-control">[code]</a></font></p>
 </li>
 </ul>
@@ -623,7 +627,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-06 15:59:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-14 16:00:47 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
