--- a/index.html
+++ b/index.html
@@ -218,6 +218,14 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2510.18633"><b>Query Decomposition for RAG: Balancing Exploration-Exploitation.</b></a>  <br />    Roxana Petcu, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Evangelos Kanoulas, Maarten de Rijke, Dawn Lawrie and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.18633</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, Yilun Du and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.18135</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2510.08240"><b>The Alignment Waltz: Jointly Training Agents to Collaborate for Safety.</b></a>  <br />    <a href="https://jackz.io/"><font color="Black"> Jingyu Zhang</font></a>, Haozhu Wang, Eric Michael Smith, Sid Wang, Amr Sharaf, Mahesh Pasupuleti, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, <a href="https://scholar.google.com/citations?hl=en&amp;user=lMkTx0EAAAAJ"><font color="Black"> Jason Weston</font></a> and Hongyuan Zhan. <br />   <font color="Gray">arXiv preprint arXiv:2510.08240</font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
@@ -351,14 +359,6 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, Yilun Du and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2510.18633"><b>Query Decomposition for RAG: Balancing Exploration-Exploitation.</b></a>  <br />    Roxana Petcu, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Evangelos Kanoulas, Maarten de Rijke, Dawn Lawrie and <a href="https://scholar.google.com/citations?user=M3BSiiQAAAAJ&amp;hl=en"><font color="Black"> Kevin Duh</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1></font></p>
 </li>
 </ul>
 <ul>
@@ -639,7 +639,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-22 09:00:48 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-22 09:37:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
