--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, Yilun Du and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.18135</font>, 2025. <font size=-1></font></p>
+<li><p><a href="https://arxiv.org/abs/2510.18135"><b>World-in-World: World Models in a Closed-Loop World.</b></a>  <br />    Jiahan Zhang, Muqing Jiang, Nanru Dai, <a href="https://taiminglu.com/"><font color="Black"> Taiming Lu</font></a>, Arda Uzunoglu, Shunchi Zhang, Yana Wei, Jiahao Wang, Vishal M. Patel, Paul Pu Liang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>, Cheng Peng, <a href="https://engineering.jhu.edu/faculty/rama-chellappa/"><font color="Black"> Rama Chellappa</font></a>, <a href="https://www.tshu.io/"><font color="Black"> Tianmin Shu</font></a>, <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>, Yilun Du and <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.18135</font>, 2025. <font size=-1><a href="https://world-in-world.github.io/">[project]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -258,10 +258,6 @@ Other affiliations:</p>
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    <a href="https://niyatibafna.github.io/"><font color="Black"> Niyati Bafna</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, <a href="https://www.cs.jhu.edu/~yarowsky/"><font color="Black"> David Yarowsky</font></a>, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2506.22724</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2505.20321"><b>BiomedSQL: Text-to-SQL for Scientific Reasoning on Biomedical Knowledge Bases.</b></a>  <br />    Mathew J. Koretsky, Maya Willey, Adi Asija, Owen Bianchi, Chelsea X. Alvarado, Tanay Nayak, Nicole Kuznetsov, <a href="https://sungwon-kim.com/"><font color="Black"> Sungwon Kim</font></a>, <a href="https://scholar.google.com/citations?user=ZjfgPLMAAAAJ&amp;hl=en"><font color="Black"> Mike A. Nalls</font></a>, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2505.20321</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/BiomedSQL">[data]</a> <a href="https://github.com/NIH-CARD/biomedsql">[code]</a></font></p>
 </li>
 </ul>
@@ -275,6 +271,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2504.10284"><b>Can LLMs Generate Tabular Summaries of Science Papers? Rethinking the Evaluation Protocol.</b></a>  <br />    <a href="https://mighty-weaver.github.io/"><font color="Black"> Weiqi Wang</font></a>, <a href="https://jefferyo.github.io/"><font color="Black"> Jiefu Ou</font></a>, Yangqiu Song, <a href="https://www.cs.jhu.edu/~vandurme/index.html"><font color="Black"> Benjamin Van Durme</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2504.10284</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/arXiv2Table">[data]</a></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://arxiv.org/abs/2506.22724"><b>The Translation Barrier Hypothesis: Multilingual Generation with Large Language Models Suffers from Implicit Translation Failure.</b></a>  <br />    <a href="https://niyatibafna.github.io/"><font color="Black"> Niyati Bafna</font></a>, <a href="https://tianjianl.github.io/"><font color="Black"> Tianjian Li</font></a>, <a href="https://kentonmurray.com/index.html"><font color="Black"> Kenton Murray</font></a>, David R. Mortensen, <a href="https://www.cs.jhu.edu/~yarowsky/"><font color="Black"> David Yarowsky</font></a>, Hale Sirin and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">The Asia-Pacific Chapter of the Association for Computational Linguistics (AACL)</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/translation-barrier">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -643,7 +643,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-24 09:59:30 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-26 20:24:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
