--- a/index.html
+++ b/index.html
@@ -214,10 +214,6 @@ Other affiliations:</p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://pubmed.ncbi.nlm.nih.gov/39868292/"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="Gray">biorxiv preprint 2025.01.15.63327</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
-</li>
-</ul>
-<ul>
 <li><p><a href="https://arxiv.org/abs/2510.20091"><b>CreativityPrism: A Holistic Benchmark for Large Language Model Creativity.</b></a>  <br />    Zhaoyi Joey Hou, Bowei Alvin Zhang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Bhiman Kumar Baghel, Anneliese Brei, Ximing Lu, Meng Jiang, Faeze Brahman, Snigdha Chaturvedi, Haw-Shiuan Chang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and Xiang Lorraine Li. <br />   <font color="Gray">arXiv preprint arXiv:2510.20091</font>, 2025. <font size=-1><a href="https://joeyhou.github.io/CreativityPrism/">[data]</a></font></p>
 </li>
 </ul>
@@ -359,6 +355,10 @@ Other affiliations:</p>
 </ul>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2411.01101"><b>Self-Consistency Falls Short! The Adverse Effects of Positional Bias on Long-Context Problems.</b></a>  <br />    <a href="https://scholar.google.com/citations?user=t3Hhnx8AAAAJ&amp;hl=en"><font color="Black"> Adam Byerly</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Transactions of the Association for Computational Linguistics (TACL)</font>, 2025. <font size=-1></font></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://pubmed.ncbi.nlm.nih.gov/39868292/"><b>CARDBiomedBench: A Benchmark for Evaluating Large Language Model Performance in Biomedical Research.</b></a>  <br />    Owen  Bianchi, Maya  Willey, Chelsea X  Avarado, Benjamin  Danek, Marzieh  Khani, Nicole  Kuznetsov, Anant  Dadu, Syed  Shah, Mathew J  Koretsky, Mary B  Makarious, Cory  Weller, Kristin S  Levine, Sungwon  Kim, Paige  Jarreau, Dan  Vitale, Elise  Marsan, Hirotaka  Iwaki, Hampton  Leonard, Sara  Bandres-Ciga, Andrew B  Singleton, Mike A.  Nalls, Shekoufeh  Mokhtari, Daniel  Khashabi and <a href="https://scholar.google.com/citations?user=Rr643xYAAAAJ&amp;hl=en"><font color="Black"> Faraz Faghri</font></a>. <br />   <font color="DarkRed">The Lancet Digital Health</font>, 2025. <font size=-1><a href="https://huggingface.co/datasets/NIH-CARD/CARDBiomedBench">[data]</a> <a href="https://github.com/NIH-CARD/CARDBiomedBench">[code]</a> <a href="https://www.datatecnica.com/blog/can-gpt-45-claude-37-and-gemini-20-keep-up-with-biomedical-research-a-benchmark-update">[blog]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -643,7 +643,7 @@ Other affiliations:</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-10-26 20:24:51 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-10-31 13:19:49 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
