--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ Other affiliations:</p>
 <li><p><a href="https://cozheyuanzhangde.github.io/">Zheyuan &ldquo;Brian&rdquo; Zhang</a> - co-advised w/ Tianmin Shu</p>
 </li>
 </ul>
-<p>Here’s a <a href="https://danielkhashabi.com/team_photo_nov_2025.jpg">team photo</a> from our recent fun outing.<br />
+<p>Here’s a <a href="https://x.com/DanielKhashabi/status/1985487186326938088">team photo</a> from our recent fun outing.<br />
 We’re also grateful to collaborate with a number of exceptional PhD, MS and undergraduate students who are not listed here.</p>
 <p><h2 id="publication">Publication</h2></p>
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
@@ -644,7 +644,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-03 08:04:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-04 21:33:28 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
