--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 <li><p><b>Safety, oversight and evaluation:</b> How can oversight mechanisms (e.g., debate, red teaming, verification) be formalized and automated at scale? How can AI systems balance autonomy with auditing and safety mechanisms to ensure human trust?</p>
 </li>
 </ul>
-<p>Our research is driven by a key real application: accelerating <b>scientific discovery</b> in an era where knowledge grows faster than any individual can absorb.</p>
+<p>Our research is driven by a key real application: accelerating <b>scientific discovery</b> in an era where <i>knowledge grows faster than any individual can absorb</i>.</p>
 <p>Most of my research is aligned with the following research communities: <i>natural language processing</i> (ACL, NAACL, EMNLP), <i>machine learning</i> and <i>AI</i>  (COLM, ICLR, NeurIPS, ICML, AAAI, IJCAI).</p>
 <div class="infoblock">
 <div class="blockcontent">
@@ -371,6 +371,10 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    Nathan Breslow, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, Michael C. Schatz, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2406.20092"><b>LLaVolta: Efficient Multi-modal Models via Stage-wise Visual Context Compression.</b></a>  <br />    <a href="https://beckschen.github.io/"><font color="Black"> Jieneng Chen</font></a>, Luoxin Ye, Ju He, Zhao-Yang Wang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://www.cs.jhu.edu/~ayuille/"><font color="Black"> Alan Yuille</font></a>. <br />   <font color="DarkRed">Advances in Neural Information Processing Systems (NeurIPS)</font>, 2024. <font size=-1><a href="https://github.com/Beckschen/LLaVolta">[code]</a> <a href="https://beckschen.github.io/llavolta.html">[project]</a></font></p>
 </li>
 </ul>
@@ -644,7 +648,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-12 14:34:11 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-18 09:18:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
