--- a/index.html
+++ b/index.html
@@ -215,6 +215,10 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    Nathan Breslow, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, Michael C. Schatz, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2511.12797</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://arxiv.org/abs/2510.20091"><b>CreativityPrism: A Holistic Benchmark for Large Language Model Creativity.</b></a>  <br />    Zhaoyi Joey Hou, Bowei Alvin Zhang, <a href="https://yining610.github.io/"><font color="Black"> Yining Lu</font></a>, Bhiman Kumar Baghel, Anneliese Brei, <a href="https://gloriaximinglu.github.io/"><font color="Black"> Ximing Lu</font></a>, <a href="http://www.meng-jiang.com/"><font color="Black"> Meng Jiang</font></a>, <a href="https://fabrahman.github.io/"><font color="Black"> Faeze Brahman</font></a>, Snigdha Chaturvedi, Haw-Shiuan Chang, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://lorraine333.github.io/"><font color="Black"> Xiang Lorraine Li</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2510.20091</font>, 2025. <font size=-1><a href="https://joeyhou.github.io/CreativityPrism/">[data]</a></font></p>
 </li>
 </ul>
@@ -368,10 +372,6 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <ul>
 <li><p><a href="https://www.acpjournals.org/doi/abs/10.7326/ANNALS-25-00012"><b>Large Language Models for Screening Search Results in Systematic Reviews: Are We There Yet?</b></a>  <br />    S Swaroop Vedula and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed">Annals of Internal Medicine</font>, 2025. <font size=-1></font></p>
-</li>
-</ul>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    Nathan Breslow, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, Michael C. Schatz, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="DarkRed"></font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -648,7 +648,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-18 09:18:08 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-18 09:25:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
