--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ aligned with human values—enabling trustworthy, AI-driven discovery.</p>
 <ul>
 <li><p><b>Understanding the foundations:</b> What fundamental principles govern the intelligent behavior that emerges from large-scale training? And can we use these insights as guiding principles of scaling?</p>
 </li>
-<li><p><b>Reasoning, communication and interaction:</b> How can we amplify AI’s capacity for reasoning across tasks, contexts, and interactions with the world? How can we characterize the trade-off between generality vs. specialization (doing what user needs) in adaptive systems?</p>
+<li><p><b>Reasoning, communication and interaction:</b> How can we amplify AI’s capacity for reasoning across tasks, contexts, and interactions with the world? How can we characterize the trade-off between generality vs. specialization (sticking to what user wants) in adaptive systems?</p>
 </li>
 <li><p><b>Safety, oversight and evaluation:</b> How can oversight mechanisms (e.g., debate, red teaming, verification) be formalized and automated at scale? How can AI systems balance autonomy with auditing and safety mechanisms to ensure human trust?</p>
 </li>
@@ -215,7 +215,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    Nathan Breslow, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, Michael C. Schatz, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2511.12797</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2511.12797"><b>Genomic Next-Token Predictors are In-Context Learners.</b></a>  <br />    Nathan Breslow, <a href="https://aamixsh.github.io/"><font color="Black"> Aayush Mishra</font></a>, Mahler Revsine, <a href="https://schatz-lab.org/"><font color="Black"> Michael C. Schatz</font></a>, <a href="https://anqiliu-ai.github.io/"><font color="Black"> Anqi Liu</font></a> and <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a>. <br />   <font color="Gray">arXiv preprint arXiv:2511.12797</font>, 2025. <font size=-1><a href="https://github.com/JHU-CLSP/icl-in-genomics-models">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -648,7 +648,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-11-18 09:25:01 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-11-18 10:44:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
