--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 </td>
 <td id="layout-content">
-<table class="imgtable"><tr><td>
+<head>
+<link rel="shortcut icon" href="favicon.ico"/>
+    </head><table class="imgtable"><tr><td>
 <img src="profile11.png" alt="alt text" width="170px" />&nbsp;</td>
 <td align="left"><p><span style="font-weight: bold; font-size: 125%; line-height: 2.0;">Daniel Khashabi </span> <br />
 Assistant Professor,  <a href="https://www.cs.jhu.edu/">Department of Computer Science</a>,
@@ -441,7 +443,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen, <a href="https://akariasai.github.io/"><font color="Black"> Akari Asai</font></a>, <a href="https://www.victorzhong.com/"><font color="Black"> Victor Zhong</font></a>, Rajarshi Das, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <b>Best video award.🏆</b> <font size=-1><a href="https://danielkhashabi.com/files/2023_adaptive_retrieval/adaptive_retrieval_oral_final.key">[slides]</a> <a href="https://youtu.be/hJbxW0xct2E">[talk]</a> <a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
+<li><p><a href="https://arxiv.org/abs/2212.10511"><b>When Not to Trust Language Models: Investigating Effectiveness and Limitations of Parametric and Non-Parametric Memories.</b></a>  <br />    Alex Mallen, <a href="https://akariasai.github.io/"><font color="Black"> Akari Asai</font></a>, <a href="https://www.victorzhong.com/"><font color="Black"> Victor Zhong</font></a>, Rajarshi Das, <a href="https://www.cs.jhu.edu/~danielk/"><font color="Black"> Daniel Khashabi</font></a> and <a href="https://homes.cs.washington.edu/~hannaneh/"><font color="Black"> Hannaneh Hajishirzi</font></a>. <br />   <font color="DarkRed">Annual Meeting of the Association for Computational Linguistics (ACL)</font>, 2023. <b>Best video award.🏆</b> <font size=-1><a href="https://danielkhashabi.com/files/2023_adaptive_retrieval/adaptive_retrieval_oral_final.pdf">[slides]</a> <a href="https://youtu.be/hJbxW0xct2E">[talk]</a> <a href="https://github.com/AlexTMallen/adaptive-retrieval">[code]</a></font></p>
 </li>
 </ul>
 <ul>
@@ -650,7 +652,7 @@ We’re also grateful to collaborate with a number of exceptional PhD, MS and un
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-12-02 13:53:13 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-12-14 12:23:04 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
